@@ -52,4 +52,11 @@ public class BundleJarTest extends BaseIoTest {
 		Resource[] res = patternLoader.getResources("osgibundlejar:/**/fragment*.file");
 		assertEquals(0, res.length);
 	}
+
+	// check last modified
+	public void testLastModifiedWhileUsingJustTheOSGiAPI() throws Exception {
+		Resource resource = patternLoader.getResource("osgibundlejar:/org/springframework/osgi/iandt/io/duplicate.file");
+		assertTrue(resource.lastModified() > 0);
+	}
+
 }
