@@ -32,7 +32,8 @@ Package org.springframework.osgi.extender
 * added BootstrappingDependencyEvent for notifying the pre-refresh dependency activities
 
 Package org.springframework.osgi.io
-* improved getFile() method when dealing with resources in expanded bundles
+* improved OsgiBundleResource#getFile() method when dealing with resources in expanded bundles
+* OsgiBundleResource#lastModified() works even when the underlying bundle cannot be resolved to a File
 
 Package org.springframework.osgi.service
 * added descriptive exception when invoking non-public methods on class proxies (caused by classes with final mehtods)
